This is the css Class folder

--- a/p7.html
+++ b/p7.html
@@ -66,7 +66,7 @@
         <li>attribute selectors(using id attribute inside the element)</li>
         <li>attribute with value selector(attribute with val)</li>
     </ul>
-    <h1>Element selectors(tag name)</h1>
+    <h1>Class name selectors(class name using .)</h1>
     <section>
         <!-- div*5>h1{heading$}/p{Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident esse ea necessitatibus quo animi ducimus commodi tenetur asperiores rerum minima voluptas, earum sed vitae quibusdam eaque quam velit aperiam laborum!}/btn{Know more} -->
         <div class="card">
