--- a/p13.html
+++ b/p13.html
@@ -12,7 +12,7 @@
             background-color: aquamarine;
             border: 3px solid black;
         }
-        .container>h1{/*Descendenr Selector*/
+        .container>h1{/*child Selector*/
             color: white;
             background-color: darkgoldenrod;
             padding: 10px;
