--- a/border/p9.html
+++ b/border/p9.html
@@ -4,8 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container{
+            padding: 20px;
+            margin: 30px;
+            border: 3px solid #222222;
+        }
+        .container div{
+            width: 100px;
+            height: 100px;
+            padding: 20px;
+            margin: 20px;
+            background-color: darkblue ;
+            color: white;
+            font-family: sans-serif;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .container .b1{
+            border-radius: 10px;
+        }
+        .container .b2{
+            border-radius: 20px;
+        }
+        .container .b3{
+            border-radius: 50%;
+        }
+        .container .b4{
+            border-top-right-radius: 50%;
+            border-bottom-left-radius: 50%;
+        }
+        .container .b5{
+            border-top-left-radius: 50%;
+            border-bottom-right-radius: 50%;
+            background: linear-gradient(90deg #b50bd7, #008cff);
+            height: fit-content;
+        }
+        .container .b6{
+            border-radius: 10px 10px 10px 0px;/*btlr, btrr, bbrr, bblr*/
+        }
+        .container .b7{
+            border-radius: 30px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="b1">First</div>
+        <div class="b2">Second</div>
+        <div class="b3">Third</div>
+        <div class="b4">Fourth</div>
+        <div class="b5">Fifith</div>
+        <div class="b6">Sixth</div>
+        <div class="b7">Seventh</div>
+    </div>
 </body>
 </html>
