Updated Css folder

--- a/list/p4.html
+++ b/list/p4.html
@@ -12,14 +12,15 @@
             border: 1px solid #ccc;
         }
         ul{
-            list-style-image: url('./img/chat_1364861.png') ;/*use freepik*/
-            list-style-position: inside;
+            list-style: upper-roman inside url(./img/chat_1364861.png);
         }
+
     </style>
 </head>
 <body>
     <center>
-        <h1>Using img as a bullet point using list-style0=-img css property</h1>
+        <h1>List Shortand property</h1>
+        <h2>List srtle css property</h2>
     </center>
     <hr>
     <ul>
