--- a/position/p1.html
+++ b/position/p1.html
@@ -11,13 +11,7 @@
             <p>Positioning elements appropriately on the web pages is a necessity for a good layout design. </p>
         </center>
         <hr>
-
-        <p>There are 4 values</p>
-        <ol>
-            <li>RELATIVE - Current position as ref</li>
-            <li>ABSOLUTE - Body as a ref and scroll along with content</li>
-            <li>FIXED - Body as a ref , will not scroll along with content</li>
-            <li>STICKY - Depend on scrolling position</li>
+ end on scrolling position</li>
         </ol>
 
         <hr>
