--- a/pseudo element/p4.html
+++ b/pseudo element/p4.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        input::placeholder{
-            content: "Enter your name";
-        }
-    </style>
-</head>
-<body>
-    <center>
-        <h1>::Placeholder</h1>
-    </center>
-    <form action="">
-        <input type="text" placeholder="">
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>PSEUDO-ELEMENT</title>
+        <style>
+            input::placeholder {
+                color:rgb(116, 255, 10);
+                text-transform: capitalize;
+                letter-spacing: 4px;
+            }
+        </style>
+    </head>
+    <body>
+        <center>
+            <h1>::placeholder</h1>
+        </center>
+        <hr>
+
+        <form action="">
+            <label for="">Enter Name</label>
+            <input type="text" name="name" id="name" placeholder="Enter full name">
+        </form>
+    </body>
 </html>
