Updated Css folder

--- a/outline/temp.html
+++ b/outline/temp.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         body {
@@ -523,6 +524,9 @@ h1 {
   font-weight: bold;
   line-height: 1.2;
 }
+.profilesPeople h1{
+    font-size: 1.3rem;
+}
 
 h1 .highlight {
   display: inline;
@@ -843,7 +847,7 @@ h1 .asterisk {
             <div class="people1">
                 <img src="https://aximo-react.vercel.app/assets/team1-DmWE10zh.png" alt=""> <br>
                 <center style="color: black; padding-top: 20px;">
-                    <h1 style="font-style: 1.3rem;">Andrew Mark</h1> <br>
+                    <h1 style="font-style: 1rem;">Andrew Mark</h1> <br>
                     <p>Creative Director</p>
                 </center>
             </div>
